# avantis-realtime-salary

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
.github/workflows/: anchor-test.yml
frontend/: package.json
frontend/config/: webpack.config.js
frontend/src/: App.js  SendTransactionButton.js  Wallet.css  Wallet.js
programs/avantis-realtime-salary/: Cargo.toml
programs/avantis-realtime-salary/src/: lib.rs
tests/: avantis-realtime-salary.js  avantis-realtime-salary.ts
